================

1.15 (unreleased)
-----------------

- Doppelclick auf Checkout (und andere Aktionen) führt die Aktion nur noch
  einmal aus (Bug #4499).

- Verlinkte Bildergruppe ohne Bild führt dazu, dass ein Artikel nicht
  eingecheckt werden kann (Bug #4746).

- Automatisches Veröffentlichen von Relateds, wenn diese veröffentlicht sind
  und keine semantische Änderung haben.

1.14.1 (2009-03-03)
-------------------

- 1.14-Release repariert.

1.14 (2009-03-03)
-----------------

- Entfernen aus Channeln beim Zurückzeiehen funktionierte nicht zuverlässig
  (bug #4722).

- Access Keys für Checkin (^I) und Checkout (^O).

- Property für letzte inhaltliche Änderung, die beim Checkin gesetzt wird. Dies
  kann durch die Aktion »Einchecken (Korrektur)« verhindert werden. (#4720)

1.13 (2009-02-15)
-----------------

- Channel stehen nach dem Syndizieren nicht mehr unter den bearbeiteten
  Dokumenten.
- Neue Aktion beim Syndizieren: »Syndizieren ohne Relateds«.

1.12 (2009-02-11)
-----------------

- Einchecken schneller: Automatisches aktualisieren der Dokumente, die sich auf
  das eingecheckte Dokument beziehen passiert jetzt asynchron.

1.11 (2009-02-09)
-----------------

- WYSIWYG-Editor: Es ist nicht mehr möglich ein Video so einzufügen, dass es
  nach dem Speichern weg ist (Bug #4652).
- WYSIWYG-Editor: Es ist jetzt möglich auch nach der Video-Box Text einzugeben,
  wenn die Video-Box hinten an das Dokument angefügt wird.
- Die Checkbox »Tages-NL« ist jetzt bei neuen Objekten automatisch aktiviert.
- WYSIWYG-Editor: Beim Bearbeiten von Audio/Video steht jetzt »mit Info« statt
  »mit Links« zur Auswahl (Bug #4650).

1.10.2 (2009-02-05)
-------------------

- Selenium-Tests können jetzt die Product-Config setzten.

1.10.1 (2009-02-01)
-------------------

- Selenium-Tests in extra ZCML-File.
- Browsing-Location-View/-Adapter auf IContained registriert.
- Zope-Pakete aktualisiert + abhängige Änderungen
- Lightboxen für Keywords und Kopieren repariert (+Test!)
