@@ -38,73 +38,31 @@ Let's get a content object from the repository and add it:
 >>> from zeit.cms.repository.interfaces import IRepository
 >>> repository = zope.component.getUtility(IRepository)
 >>> content = repository['politik.feed']
+
+Just adding doesn't work:
+
 >>> clipboard[u'myfeed'] = content
 Traceback (most recent call last):
     ...
 ValueError: Can only contain IClipboardEntry objects. Got <...> instead.
+
+But we can adapt to ``IClipboardEntry``:
+
 >>> clipboard[u'myfeed'] = IClipboardEntry(content)
 >>> list(clipboard.keys())
 [u'myfeed']
 
 
-Adding Objects to The Clipboard via `addContent` method
-=======================================================
+Clips
+=====
 
-The add content method tries to be smart where to insert content. There are two
-cases.
-
-`refrence_object` is an ICMSContent
-+++++++++++++++++++++++++++++++++++
-
-When the `refrence_object` provides ICMSContent, the object is added *after*
-the `reference_object`. So using 'myfeed' as reference inserts after it:
-
->>> reference_object = clipboard['myfeed']
->>> reference_object
-<zeit.cms.clipboard.entry.Entry object at 0x...>
->>> content = repository['2007']['02']['Traum-Umberto-Eco']
->>> clipboard.addContent(reference_object, content, content.__name__)
->>> list(clipboard.keys())
-[u'myfeed', u'Traum-Umberto-Eco']
-
-When still using `myfeed` we insert between `Traum...` and the feed:
-
->>> content = repository['2007']['02']['Verfolgt']
->>> clipboard.addContent(reference_object, content, content.__name__)
->>> list(clipboard.keys())
-[u'myfeed', u'Verfolgt', u'Traum-Umberto-Eco']
-
-
-Adding the same object twice works as well:
-
->>> clipboard.addContent(reference_object, content, content.__name__)
->>> list(clipboard.keys())
-[u'myfeed', u'Verfolgt-2', u'Verfolgt', u'Traum-Umberto-Eco']
-
-
-`reference_object` is a Container
-+++++++++++++++++++++++++++++++++
-
-When the `reference_object` is a container, but *not* an ICMSContent, the
-object is added at first position. This is also true for the clipboard itself:
-
-
->>> content = repository['2007']['02']['Vita']
->>> clipboard.addContent(clipboard, content, content.__name__)
->>> list(clipboard.keys())
-[u'Vita', u'myfeed', u'Verfolgt-2', u'Verfolgt', u'Traum-Umberto-Eco']
-
-
-Adding Clips
-============
-
-Clips are folders in the clipboard. A clip is alwasy appended at the root:
+Clips are folders in the clipboard. A clip is always appended at the root but
+can be moved later.
 
 >>> clipboard.addClip(u'Politik')
 >>> clipboard.addClip(u'Wirtschaft')
 >>> list(clipboard.keys())
-[u'Vita', u'myfeed', u'Verfolgt-2', u'Verfolgt', u'Traum-Umberto-Eco',
- u'Politik', u'Wirtschaft']
+[u'myfeed', u'Politik', u'Wirtschaft']
 
 Also clips with strange titles can be added:
 
@@ -112,12 +70,8 @@ Also clips with strange titles can be added:
 >>> clipboard.addClip('@property@')
 >>> clipboard.addClip('++etc++site')
 >>> list(clipboard.keys())
-[u'Vita', u'myfeed', u'Verfolgt-2', u'Verfolgt', u'Traum-Umberto-Eco',
- u'Politik', u'Wirtschaft', u'binbash', u'property@', u'etc++site']
+[u'myfeed', u'Politik', u'Wirtschaft', u'binbash', u'property@', u'etc++site']
 
-
-Removing clips
-==============
 
 Clips can be removed by just deleting them from the container:
 
@@ -125,61 +79,115 @@ Clips can be removed by just deleting them from the container:
 >>> del clipboard['property@']
 >>> del clipboard['etc++site']
 >>> list(clipboard.keys())
-[u'Vita', u'myfeed', u'Verfolgt-2', u'Verfolgt', u'Traum-Umberto-Eco',
- u'Politik', u'Wirtschaft']
+[u'myfeed', u'Politik', u'Wirtschaft']
+
+
+Adding Objects to The Clipboard via `addContent` method
+=======================================================
+
+The add content method tries to be smart where to insert content.
+``addContent`` gets the following arguments: a reference_object, the content to
+be added, and a desired name for the content to be added and whether content
+should be put *into* the reference or after it.
+
+1. If the ``reference\_object`` is a clip *and* it is expanded, the
+   content is inserted *into* the container at first position.
+
+2. In other cases the object is added *after* the reference object.
+
+The model doens't know anything about being expanded or not, though. That's why
+``addContent`` has the optional argument ``insert=False``.
+
+Using the ``Politik`` clip as reference will add content *after* Politik
+because Politik is collapsed right now:
+
+>>> reference_object = clipboard['Politik']
+>>> content = repository['2007']['02']['Traum-Umberto-Eco']
+>>> clipboard.addContent(reference_object, content, content.__name__)
+>>> list(clipboard.keys())
+[u'myfeed', u'Politik', u'Traum-Umberto-Eco', u'Wirtschaft']
+
+When using `myfeed` as reference, content will be added after it:
+
+>>> content = repository['2007']['02']['Verfolgt']
+>>> clipboard.addContent(clipboard['myfeed'], content, content.__name__)
+>>> list(clipboard.keys())
+[u'myfeed', u'Verfolgt', u'Politik', u'Traum-Umberto-Eco', u'Wirtschaft']
+
+
+Adding the same object twice works as well:
+
+>>> clipboard.addContent(clipboard['myfeed'], content, content.__name__)
+>>> list(clipboard.keys())
+[u'myfeed', u'Verfolgt-2', u'Verfolgt', u'Politik', u'Traum-Umberto-Eco',
+ u'Wirtschaft']
+
+To insert into a folder the ``insert`` argument must be True:
+
+>>> clipboard.addContent(
+...     reference_object, repository['testcontent'], u'test', insert=True)
+>>> list(clipboard.keys())
+[u'myfeed', u'Verfolgt-2', u'Verfolgt', u'Politik', u'Traum-Umberto-Eco',
+ u'Wirtschaft']
+>>> list(clipboard[u'Politik'].keys())
+[u'test']
+
+It is an error when insert is True but the reference object is not a clip:
+
+>>> clipboard.addContent(
+...     clipboard['myfeed'], repository['testcontent'], u'test', insert=True)
+Traceback (most recent call last):
+    ...
+ValueError: `reference_object` must be a Clip to insert.
+
 
 
 Moving Content Around
 =====================
 
 It is possible to move objects around in the clipboard. We can for instance put
-documents into clips. Move the `Verfolgt` object to the `Politik` clip.:
+documents into clips. Move the `Verfolgt` object to the `Politik` clip. Note
+that move has the same semantics as add:
 
 >>> politik = clipboard[u'Politik']
 >>> verfolgt = clipboard[u'Verfolgt']
->>> clipboard.moveObject(verfolgt, politik)
+>>> clipboard.moveObject(verfolgt, politik, insert=True)
 >>> list(clipboard.keys())
-[u'Vita', u'myfeed', u'Verfolgt-2', u'Traum-Umberto-Eco',
- u'Politik', u'Wirtschaft']
+[u'myfeed', u'Verfolgt-2', u'Politik', u'Traum-Umberto-Eco', u'Wirtschaft']
 >>> list(politik.keys())
-[u'Verfolgt']
+[u'Verfolgt', u'test']
 
 
 It's also possible to re-order content. Move the `Politik` clip to the front,
 i.e. "after" the clipboard:
 
->>> vita = clipboard[u'Vita']
->>> clipboard.moveObject(politik, clipboard)
+>>> clipboard.moveObject(politik, clipboard, insert=True)
 >>> list(clipboard.keys())
-[u'Politik', u'Vita', u'myfeed', u'Verfolgt-2', u'Traum-Umberto-Eco',
- u'Wirtschaft']
+[u'Politik',  u'myfeed', u'Verfolgt-2', u'Traum-Umberto-Eco', u'Wirtschaft']
 
-When using a non-folderish object as "drop target" the object will be moved
-*after* the drop target. Move `traum` after `vita`:
+When insert==False the object is moved after the reference object:
 
 >>> traum = clipboard[u'Traum-Umberto-Eco']
->>> clipboard.moveObject(traum, vita)
+>>> clipboard.moveObject(traum, politik)
 >>> list(clipboard.keys())
-[u'Politik', u'Vita', u'Traum-Umberto-Eco', u'myfeed', u'Verfolgt-2',
- u'Wirtschaft']
-
+[u'Politik', u'Traum-Umberto-Eco', u'myfeed', u'Verfolgt-2', u'Wirtschaft']
 
 
 It's also possible to move Clips into Clips to build a deeper hierarchy:
 
 >>> wirtschaft = clipboard[u'Wirtschaft']
->>> clipboard.moveObject(wirtschaft, politik)
+>>> clipboard.moveObject(wirtschaft, politik[u'Verfolgt'])
 >>> list(clipboard.keys())
-[u'Politik', u'Vita', u'Traum-Umberto-Eco', u'myfeed', u'Verfolgt-2']
+[u'Politik', u'Traum-Umberto-Eco', u'myfeed', u'Verfolgt-2']
 >>> list(politik.keys())
-[u'Wirtschaft', u'Verfolgt']
+[u'Verfolgt', u'Wirtschaft', u'test']
 
 
 You can drop objects onto themselves. Nothing will happen though:
 
->>> clipboard.moveObject(verfolgt, verfolgt)
+>>> clipboard.moveObject(clipboard[u'Verfolgt-2'], clipboard[u'Verfolgt-2'])
 >>> list(clipboard.keys())
-[u'Politik', u'Vita', u'Traum-Umberto-Eco', u'myfeed', u'Verfolgt-2']
+[u'Politik', u'Traum-Umberto-Eco', u'myfeed', u'Verfolgt-2']
 
 
 Erroneous Moving Attempts
@@ -188,7 +196,7 @@ Erroneous Moving Attempts
 One could have the idea to put a Clip into a child of itself. In this case a
 ValueError is raised:
 
->>> clipboard.moveObject(politik, wirtschaft)
+>>> clipboard.moveObject(politik, wirtschaft, insert=True)
 Traceback (most recent call last):
     ...
 ValueError: `obj` must not be an ancestor of `new_container`.
