@@ -50,28 +50,39 @@ class IClipboard(IClip):
 
     """
 
-    def addContent(reference_object, add_object, name):
+    def addContent(reference_object, add_object, name, insert=False):
         """Add `add_object` to clipboard at position `reference_object`.
 
         `name` is the proposed local name of add_object in the container. It
         will be used as a hint to the name chooser.
 
-        Clipboards have a hierarichal structure. Depending on which
-        `reference_objectobj` is passed the actual adding operation is
-        determined:
+        Clipboards have a hierarichal structure:
 
-        1. `reference_object` is an ICMSContent: add after
-           `reference_object`
-        2. `reference_object` is a (ordered) container (but not ICMSContent):
-           insert into `reference_object` at first position.
+        1. If the ``reference\_object`` is a clip *and* insert is True
+           content is inserted *into* the container at first position.
+
+        2. In other cases the object is added *after* the reference object.
 
         raises ValueError if `reference_object` does neither provide
         ICMSContent nor IOrderedContainer.
+
+        raises ValueError if insert==True and reference_object does not provide
+        IClip.
+
+        """
+
+    def moveObject(obj, reference_object, insert=False):
+        """Move object to after reference_object or into it.
+
+        The new position of obj is the same as if it was added using
+        addContent.
+
+        * raises TypeError if obj does not provide IClipboardEntry
+
+        * raises ValueError if reference_object is an ancestor of obj and
+          insert == True
 
         """
 
     def addClip(title):
         """Append a new clip."""
-
-    def moveObject(obj, new_container):
-        """Move object to new_container."""
